# Nucleogenic_36Ar

./: Chlorine Corrections.ipynb  K_test_Z0_nt_Ar.csv  K_test_Z13_nt_Ar.csv  README.ME  README.md
Alder Creek sanidine/Code/: Irradiation of Alder Creek.ipynb
Alder Creek sanidine/Data/: Alder_Creek_Cd0_nt_Ar.csv  Alder_Creek_Cd10_nt_Ar.csv  Alder_Creek_Cd11_nt_Ar.csv  Alder_Creek_Cd12_nt_Ar.csv  Alder_Creek_Cd13_nt_Ar.csv  Alder_Creek_Cd14_nt_Ar.csv  Alder_Creek_Cd15_nt_Ar.csv  Alder_Creek_Cd16_nt_Ar.csv  Alder_Creek_Cd17_nt_Ar.csv  Alder_Creek_Cd18_nt_Ar.csv  Alder_Creek_Cd19_nt_Ar.csv  Alder_Creek_Cd1_nt_Ar.csv  Alder_Creek_Cd20_nt_Ar.csv  Alder_Creek_Cd21_nt_Ar.csv  Alder_Creek_Cd22_nt_Ar.csv  Alder_Creek_Cd23_nt_Ar.csv  Alder_Creek_Cd24_nt_Ar.csv  Alder_Creek_Cd25_nt_Ar.csv  Alder_Creek_Cd26_nt_Ar.csv  Alder_Creek_Cd27_nt_Ar.csv  Alder_Creek_Cd28_nt_Ar.csv  Alder_Creek_Cd29_nt_Ar.csv  Alder_Creek_Cd2_nt_Ar.csv  Alder_Creek_Cd30_nt_Ar.csv  Alder_Creek_Cd31_nt_Ar.csv  Alder_Creek_Cd32_nt_Ar.csv  Alder_Creek_Cd33_nt_Ar.csv  Alder_Creek_Cd34_nt_Ar.csv  Alder_Creek_Cd35_nt_Ar.csv  (+52 more)
GEANT4/Sanidine Example/: CMakeLists.txt  HistoManager.cc  HistoManager.hh  run1.mac  sim.cc  vis.mac
GEANT4/Sanidine Example/include/: ActionInitialization.hh  Analysis.hh  Geometry.hh  PhysicsList.hh  Run.hh  RunAction.hh  RunMessenger.hh  SteppingAction.hh  generator.hh
GEANT4/Sanidine Example/src/: ActionInitialization.cc  Geometry.cc  NeutronHPphysics.cc  PhysicsList.cc  Run.cc  RunAction.cc  RunMessenger.cc  SteppingAction.cc  generator.cc
Watt Fission/: Watt Fission Spectrum .ipynb
(+25 files in other folders)
